--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,7 @@ build_flags =
     -DCORE_DEBUG_LEVEL=0
 
 
-[env:test_fonts]  ; Experimental build
+[env:test_fonts]  ; Font Testing Program, preference only.
 platform = espressif32
 board = esp32dev
 framework = arduino
