--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ build_flags =
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
     Wire
     paulstoffregen/Time
