girl i just want the program to work

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ src_dir = test_fonts  ; <--- point to your test sketch
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
     Wire
     paulstoffregen/Time
