--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,9 @@
 
 [platformio]
 default_envs = main_build
-;src_dir = main_build  ; <--- default
-src_dir = test_fonts  ; <--- point to your test sketch
+;src_dir = src  ; <--- default
+;src_dir = test_fonts  ; <--- point to your test sketch
+src_dir = test_fonts_integrated  ; <--- point to your test sketch 2
 
 [env:main_build]  ; Main build
 platform = espressif32
