--- a/platformio.ini
+++ b/platformio.ini
@@ -10,22 +10,18 @@
 
 [platformio]
 default_envs = main_build
-;src_dir = src  ; <--- default
-;src_dir = test_fonts  ; <--- point to your test sketch
-src_dir = test_fonts_integrated  ; <--- point to your test sketch 2
+src_dir = test_fonts_integrated
 
-[env:main_build]  ; Main build
+[env:main_build]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-    Wire
-    paulstoffregen/Time
-    lovyan03/LovyanGFX@^1.2.7
-    bitbank2/bb_captouch@^1.3.1
-build_flags =
-    -DCORE_DEBUG_LEVEL=0
-
-
-
+	Wire
+	paulstoffregen/Time
+	lovyan03/LovyanGFX@^1.2.7
+	bitbank2/bb_captouch@^1.3.1
+	adafruit/MAX6675 library@^1.1.2
+build_flags = 
+	-DCORE_DEBUG_LEVEL=0
